# device_query

./: Cargo.toml  README.md  build.rs
examples/: keyboard_info.rs  mouse_info.rs  print_coords.rs
src/: device_query.rs  lib.rs  mouse_state.rs
src/linux/: devicestate.rs  keymap.rs  mod.rs
src/windows/: devicestate.rs  keymap.rs  mod.rs
