[package]
name = "device_query"
version = "0.3.0"
authors = ["ostrosco <ostrosco@fastmail.fm>", "Kixiron <kixiron.contact@gmail.com>"]
build = "build.rs"
description = "A basic library for querying keyboard and mouse state on-demand without a window."
homepage = "https://github.com/ostrosco/device_query"
repository = "https://github.com/ostrosco/device_query"
readme = "README.md"
keywords = ["input", "mouse", "keyboard"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "ostrosco/device_query" }

[build-dependencies]
pkg-config = "0.3.14"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18.1", features = ["xlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.7", features = ["windef", "winuser"] }
